Updated responsiveness of Index Profile Photo

--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
         <!-- Main Body goes in Container -->
         <div class="row">
             <div class="col-md-3">
-                <img class="img img-thumbnail"
-                    src="https://statici.behindthevoiceactors.com/behindthevoiceactors/_img/chars/leorio-paladiknight-hunter-x-hunter-2011-0.87.jpg"
-                    alt="Placeholder">
+                <img class="img img-thumbnail" src="https://cdn.myanimelist.net/images/characters/11/174519.jpg" 
+                alt="Placeholder">
             </div>
             <!--ipsum col column-->
             <div class="col-md-6">
