Inserted my actual projects instead of fake Shrek related ones! Progress!

--- a/portfolio.html
+++ b/portfolio.html
@@ -137,12 +137,12 @@
                     <div class="card-body">
 
                         <h5 class="card-title">Project 1</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Shrek the Movie Fanclub</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Password Generator</h6>
                         <img class="card-img-bottom"
-                            src="http://www.tntmagazine.com/media/content/_master/56529/images/shrek.jpg"
+                            src="pwordgenerator.png"
                             alt="Placeholder">
                         <br>
-                        <a href="#" class="btn btn-primary">Visit</a>
+                        <a target="_blank" href="https://jspielberger.github.io/Homework_3/" class="btn btn-primary">Visit</a>
                     </div>
                 </div>
             </div>
@@ -150,11 +150,12 @@
                 <div class="card mt-3">
                     <div class="card-body">
                         <h5 class="card-title">Project 2</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Shrek 2 Political Action Committee</h6>
-                        <img class="card-img-bottom" src="https://pbs.twimg.com/media/DVNyEZEXkAAlfou.jpg"
+                        <h6 class="card-subtitle mb-2 text-muted">Spider-Man Trivia Quiz</h6>
+                        <img class="card-img-bottom" 
+                            src="quiz photo.PNG"
                             alt="Placeholder">
                         <br>
-                        <a href="#" class="btn btn-primary">Visit</a>
+                        <a target="_blank" href="https://jspielberger.github.io/Homework_4/" class="btn btn-primary">Visit</a>
                     </div>
                 </div>
 
