added the other projects, centered the portfolio page!

--- a/portfolio.html
+++ b/portfolio.html
@@ -127,12 +127,12 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container" style="left:10%;">
         <div class="page-header">
-            <h1>Portfolio</h1>
+            <h1 style="margin-left:8%">Portfolio</h1>
         </div>
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-5" style="margin-left: 8%;">
                 <div class="card mt-3">
                     <div class="card-body">
 
@@ -163,30 +163,30 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-5" style="margin-left:8%">
                 <div class="card mt-3">
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Shrek The Third Fanhub and Merchandise Center</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Daily Planner</h6>
                         <img class="card-subtitle mb-5"
-                            src="https://images.ctfassets.net/7h71s48744nc/2HtE4seEZa4OmKWgAA6k6A/7977f3912e75d6f816d0882f72d91569/shrek-the-third.jpg"
-                            alt="Placeholder">
+                        src="dailyplanner.PNG"
+                        alt="Placeholder">
                         <br>
-                        <a href="#" class="btn btn-primary">Visit</a>
+                        <a target="_blank" href="https://jspielberger.github.io/Homework_5/" class="btn btn-primary">Visit</a>
                     </div>
                 </div>
 
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5" >
                 <div class="card mt-3">
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Shrek Forever After Memorial Fund</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Recipe and Local Bar Finder</h6>
                         <img class="card-subtitle mb-5"
-                            src="https://cdn1.thr.com/sites/default/files/imagecache/landscape_928x523/2010/04/136163-shrek_forever_after_422x218.jpg"
+                            src="imbibo.PNG"
                             alt="Placeholder">
                         <br>
-                        <a href="#" class="btn btn-primary">Visit</a>
+                        <a target="_blank" href="https://hyukjun-kwon.github.io/imbibo/" class="btn btn-primary">Visit</a>
                     </div>
                 </div>
             </div>
