--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@
                         <h5 class="card-title">Project 1</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Password Generator</h6>
                         <img class="card-img-bottom"
-                            src="pwordgenerator.png"
+                            src="pwordgenerator.PNG"
                             alt="Placeholder">
                         <br>
                         <a target="_blank" href="https://jspielberger.github.io/Homework_3/" class="btn btn-primary">Visit</a>
